src/main/java/com/example/frota/errors/IllegalArgumentException.java
package com.example.frota.errors;

public class IllegalArgumentException extends RuntimeException{
	
	public IllegalArgumentException(String mensagem) {
		super(mensagem);
	}

}
